# rust-utils

./: Cargo.toml  README.md
cow_strings/: Cargo.toml
cow_strings/src/: lib.rs
error_utils/: Cargo.toml
error_utils/src/: lib.rs
fantoccini_utils/: Cargo.toml
fantoccini_utils/src/: lib.rs
serde_utils/: Cargo.toml
serde_utils/src/: enumstrings.rs  jsontime.rs  lib.rs
teloxide_utils/: Cargo.toml
teloxide_utils/src/: api_wrappers.rs  error_handling.rs  lib.rs  prettify.rs
